--- a/package.json
+++ b/package.json
@@ -1,14 +1,30 @@
 {
   "name": "wink-errors",
   "version": "1.0.0",
-  "main": "index.js",
-  "author": "Wink",
+  "main": "dist/index.js",
   "license": "MIT",
-  "dependencies": {},
   "scripts": {
-    "test": "standard"
+    "test": "nyc mocha --compilers js:babel-core/register -t 5000 --watch",
+    "postinstall": "babel src -d dist --source-maps --plugins transform-object-rest-spread"
   },
   "devDependencies": {
-    "standard": "^10.0.2"
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-env": "^1.6.0",
+    "chai": "^4.1.2",
+    "mocha": "^3.4.2",
+    "nyc": "^11.1.0",
+    "serverless-offline": "^3.16.0",
+    "serverless-webpack": "^3.1.0",
+    "should": "^11.2.1",
+    "sinon": "^3.2.1",
+    "webpack": "^3.3.0",
+    "webpack-node-externals": "^1.6.0"
+  },
+  "dependencies": {
+    "babel-runtime": "^6.26.0"
   }
 }
