--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "license": "MIT",
   "scripts": {
     "test": "nyc mocha --compilers js:babel-core/register -t 5000 --watch",
-    "postinstall": "babel src -d dist --source-maps --plugins transform-object-rest-spread"
+    "postinstall": "babel src -d dist --source-maps --plugins transform-object-rest-spread",
+    "build": "babel src -d dist --source-maps --plugins transform-object-rest-spread",
+    "watch": "babel --watch src -d dist --source-maps --plugins transform-object-rest-spread"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
