update json errors

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "nyc mocha --compilers js:babel-core/register -t 5000 --watch",
     "postinstall": "babel src -d dist --source-maps --plugins transform-object-rest-spread",
     "build": "babel src -d dist --source-maps --plugins transform-object-rest-spread",
-    "watch": "babel --watch src -d dist --source-maps --plugins transform-object-rest-spread"
+    "watch": "babel --watch src -d dist --source-maps --plugins transform-object-rest-spread",
+    "toJSON": "babel-node ./debug/index"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
