--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "test": "nyc mocha --compilers js:babel-core/register -t 5000 --watch",
-    "postinstall": "babel src -d dist --source-maps --plugins transform-object-rest-spread",
+    "postinstall": "babel src -d dist --source-maps --plugins transform-object-rest-spread && npm run toJSON",
     "build": "babel src -d dist --source-maps --plugins transform-object-rest-spread && npm run toJSON",
     "watch": "babel --watch src -d dist --source-maps --plugins transform-object-rest-spread",
     "toJSON": "babel-node ./debug/index"
