--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "test": "nyc mocha --compilers js:babel-core/register -t 5000 --watch",
     "build": "babel src -d dist --source-maps --plugins transform-object-rest-spread",
     "watch": "babel --watch src -d dist --source-maps --plugins transform-object-rest-spread",
+    "postinstall": "npm run build",
     "toJSON": "babel-node ./debug/index"
   },
   "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
