use local babel

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "wink-errors",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
     "test": "nyc mocha --compilers js:babel-core/register -t 5000 --watch",
-    "build": "node_modules/.bin/babel src -d dist --source-maps --plugins transform-object-rest-spread",
-    "watch": "node_modules/.bin/babel --watch src -d dist --source-maps --plugins transform-object-rest-spread",
+    "build": "node_modules/.bin/babel src -d dist --plugins transform-object-rest-spread",
+    "watch": "node_modules/.bin/babel --watch src -d dist --plugins transform-object-rest-spread",
     "postinstall": "npm run build",
     "toJSON": "babel-node ./debug/index"
   },
