--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "test": "nyc mocha --compilers js:babel-core/register -t 5000 --watch",
     "rebuild": "node_modules/.bin/babel src -d dist --plugins transform-object-rest-spread",
     "watch": "node_modules/.bin/babel --watch src -d dist --plugins transform-object-rest-spread",
-    "postinstall": "npm run rebuild",
     "toJSON": "babel-node ./debug/index"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm rebuild",
+      "pre-push": "npm rebuild"
+    }
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -19,6 +24,7 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "chai": "^4.1.2",
+    "husky": "^1.3.1",
     "mocha": "^5.1.1",
     "nyc": "^11.8.0",
     "serverless-offline": "^3.21.1",
