--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "license": "MIT",
   "scripts": {
     "test": "nyc mocha --compilers js:babel-core/register -t 5000 --watch",
-    "rebuild": "node_modules/.bin/babel src -d dist --plugins transform-object-rest-spread",
+    "build": "node_modules/.bin/babel src -d dist --plugins transform-object-rest-spread",
     "watch": "node_modules/.bin/babel --watch src -d dist --plugins transform-object-rest-spread",
     "toJSON": "babel-node ./debug/index"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm rebuild",
-      "pre-push": "npm rebuild"
+      "pre-commit": "npm build",
+      "pre-push": "npm build"
     }
   },
   "devDependencies": {
