--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm build",
-      "pre-push": "npm build"
+      "pre-commit": "npm run build",
+      "pre-push": "npm run build"
     }
   },
   "devDependencies": {
