--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "test": "nyc mocha --compilers js:babel-core/register -t 5000 --watch",
     "build": "node_modules/.bin/babel src -d dist --plugins transform-object-rest-spread",
     "watch": "node_modules/.bin/babel --watch src -d dist --plugins transform-object-rest-spread",
-    "toJSON": "babel-node ./debug/index"
+    "toJSON": "babel-node ./debug/index",
+    "prettier": "prettier --write \"src/**/*.{js,json,md}\"",
+    "prettier-check": "prettier --check \"src/**/*.{js,json,md}\"",
+    "lint": "eslint src/**/*.js",
+    "lint:fix": "eslint --fix src/**/*.js"
   },
   "husky": {
     "hooks": {
@@ -24,9 +28,20 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "chai": "^4.1.2",
+    "eslint": "^4.10.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-config-prettier": "4.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-security": "^1.4.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-prettier": "3.0.1",
     "husky": "^1.3.1",
+    "lint-staged": "8.1.5",
     "mocha": "^5.1.1",
     "nyc": "^11.8.0",
+    "prettier": "1.17.0",
     "serverless-offline": "^3.21.1",
     "serverless-webpack": "^5.1.0",
     "should": "^13.2.1",
@@ -38,5 +53,20 @@
   },
   "dependencies": {
     "babel-runtime": "^6.26.0"
+  },
+  "lint-staged": {
+    "*.js": [
+      "prettier --write",
+      "eslint --fix",
+      "git add"
+    ],
+    "*.json": [
+      "prettier --write",
+      "git add"
+    ],
+    "*.md": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
